<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/searchCardView"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:alpha="0"
        app:cardCornerRadius="@dimen/dimen_8dp"
        android:backgroundTint="@color/color_grey"
        app:layout_constraintBottom_toTopOf="@id/booksRecyclerView"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/search_by_title_and_authors"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/dimen_8dp"
            android:textSize="@dimen/dimen_16sp"
            android:importantForAutofill="no" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:alpha="0"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/search"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/searchCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchCardView"
        app:layout_constraintTop_toTopOf="@id/searchCardView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/booksRecyclerView"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:alpha="0"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchCardView"
        tools:itemCount="10"
        tools:listitem="@layout/line_item_category" />

    <TextView
        android:id="@+id/noBooksTextView"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:alpha="0"
        android:text="@string/no_books"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchCardView" />

    <Button
        android:id="@+id/noNetworkImageView"
        style="?attr/borderlessButtonStyle"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@android:color/white"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="false"
        android:drawableTop="@drawable/ic_unable_to_download"
        android:padding="@dimen/dimen_40dp"
        android:text="@string/connect_to_internet"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/loaderFrameLayout"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:alpha="1"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_gravity="center"
            android:foregroundTint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_64dp"
            android:text="@string/fetching_books" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>